(content): update index blurb

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import { fade } from "astro:transitions";
 				transition:animate={fade({ duration: "0.4s" })}
 			>
 				<h1><span transition:name="fullName">Tim Hilton</span></h1>
-				<p>crafting frontend experiences for over a decade</p>
+				<p>Lead Web Engineer building and guiding consumer platforms</p>
 			</div>
 			<div class="image-wrapper" transition:name="image">
 				<Image src={me} alt="Tim Hilton" />
