(code):fix view transitions

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Layout from "../layouts/Layout.astro";
 import { Image } from "astro:assets";
 import me from "../images/tim.jpg";
 import { fade } from "astro:transitions";
+
 ---
 
 <Layout title="Tim Hilton - Frontend Developer">
@@ -15,6 +16,7 @@ import { fade } from "astro:transitions";
 			>
 				<h1><span transition:name="fullName">Tim Hilton</span></h1>
 				<p>Lead Web Engineer building and guiding consumer platforms</p>
+				<a href="/work" class="btn">View My Work</a>
 			</div>
 			<div class="image-wrapper" transition:name="image">
 				<Image src={me} alt="Tim Hilton" />
@@ -28,6 +30,60 @@ import { fade } from "astro:transitions";
 		min-height: max-content;
 		height: calc(100vh - 48px);
 		padding: 8rem 2rem 2rem;
+	}
+
+	.btn {
+		text-decoration: none;
+		position: relative;
+		padding: 12px 24px;
+		border-radius: 24px;
+		font-weight: bold;
+		font-size: 1.25em;
+		border: none;
+		cursor: pointer;
+		color: #1d1d1d;
+		background: transparent;
+		overflow: hidden;
+		transition: transform 150ms ease, filter 150ms ease;
+
+		&::before,
+		&::after {
+			content: "";
+			position: absolute;
+			inset: 0;
+			border-radius: inherit;
+			z-index: -1;
+			transition: opacity 350ms ease-in-out;
+			text-decoration: none;
+		}
+
+		&::before {
+			background: radial-gradient(
+			circle,
+			rgba(71, 190, 237, 1) 20%,
+			rgba(71, 190, 237, 1) 50%,
+			rgba(71, 190, 237, 0.32) 100%
+			);
+			opacity: 1;
+		}
+
+		&::after {
+			background: radial-gradient(
+			circle,
+			rgba(71, 190, 237, 1) 20%,
+			rgba(71, 190, 237, 1) 100%,
+			rgba(71, 190, 237, 0.32) 100%
+			);
+			opacity: 0;
+		}
+
+		&:hover::after {
+			opacity: 1;
+		}
+
+		&:hover::before {
+			opacity: 0;
+		}
 	}
 
 	.hero-container {
