--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,6 @@ import Layout from "../layouts/Layout.astro";
 import { Image } from "astro:assets";
 import me from "../images/tim.jpg";
 import { fade } from "astro:transitions";
-
 ---
 
 <Layout title="Tim Hilton - Frontend Developer">
@@ -32,57 +31,51 @@ import { fade } from "astro:transitions";
 		padding: 8rem 2rem 2rem;
 	}
 
-	.btn {
+	a.btn {
 		text-decoration: none;
-		position: relative;
-		padding: 12px 24px;
-		border-radius: 24px;
-		font-weight: bold;
-		font-size: 1.25em;
+		background-color: rgb(59, 232, 142);
 		border: none;
-		cursor: pointer;
-		color: #1d1d1d;
-		background: transparent;
+		border-radius: 50px;
+		box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+		color: #565656;
+		font-size: 1.5em;
+		font-weight: 400;
+		padding: 0.5em 1em;
+		text-transform: uppercase;
+		transition: 0.3s ease all;
+		width: max-content;
+		position: relative;
 		overflow: hidden;
-		transition: transform 150ms ease, filter 150ms ease;
+	}
 
-		&::before,
-		&::after {
-			content: "";
-			position: absolute;
-			inset: 0;
-			border-radius: inherit;
-			z-index: -1;
-			transition: opacity 350ms ease-in-out;
-			text-decoration: none;
-		}
+	a.btn:hover {
+		background-color: rgb(59, 232, 142, 0.7);
+	}
 
-		&::before {
-			background: radial-gradient(
-			circle,
-			rgba(71, 190, 237, 1) 20%,
-			rgba(71, 190, 237, 1) 50%,
-			rgba(71, 190, 237, 0.32) 100%
-			);
-			opacity: 1;
-		}
+	a.btn:after {
+		content: "";
+		position: absolute;
+		top: -50%;
+		right: -50%;
+		bottom: -50%;
+		left: -50%;
+		background: linear-gradient(
+			to bottom,
+			rgba(229, 172, 142, 0),
+			rgba(255, 255, 255, 0.5) 50%,
+			rgba(229, 172, 142, 0)
+		);
+		transform: rotateZ(60deg) translate(-5em, 7.5em);
+	}
 
-		&::after {
-			background: radial-gradient(
-			circle,
-			rgba(71, 190, 237, 1) 20%,
-			rgba(71, 190, 237, 1) 100%,
-			rgba(71, 190, 237, 0.32) 100%
-			);
-			opacity: 0;
-		}
+	a.btn:hover::after,
+	a.btn:focus::after {
+		animation: shine 1s forwards;
+	}
 
-		&:hover::after {
-			opacity: 1;
-		}
-
-		&:hover::before {
-			opacity: 0;
+	@keyframes shine {
+		100% {
+			transform: rotateZ(75deg) translate(1em, -9em);
 		}
 	}
 
