fix overflow and mobile styling errors

--- a/src/components/PortfolioItem.astro
+++ b/src/components/PortfolioItem.astro
@@ -348,13 +348,14 @@ const {
     .tech-stack,
     .role,
     .actions,
-    .awards {
+    .awards,
+    .outcome {
       @media screen and (max-width: 768px) {
         padding: 0 3rem 0;
       }
     }
 
-    video {
+    .scroll {
       width: 100%;
     }
 
